Update GitHub profile link in index.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 <body>
     <h1>سلام 👋 من محمد ابراهیمی‌ام</h1>
     <p>برنامه‌نویس .NET و علاقه‌مند به طراحی سیستم‌های نرم‌افزاری و ربات‌های تلگرام.</p>
-    <a href="https://github.com/mohammad-ebrahimi-dev.github.io" target="_blank">مشاهده پروفایل من در GitHub</a>
-</body>
+<a href="https://github.com/mohammad-ebrahimi-dev" target="_blank">
+مشاهده گیت هاب من</a></body>
 </html>
