--- a/index.html
+++ b/index.html
@@ -106,11 +106,7 @@
         <section>
             <h2>تجربه کاری</h2>
             <ul>
-                <li>یاس‌های ارغوانی | 1404/7/14 - اکنون | برنامه نویس Backend
-                    <ul>
-                        <li>کار روی پروژه‌های بانکی</li>
-                    </ul>
-                </li>
+                <li>یاس‌های ارغوانی | 1404/7/14 - اکنون | برنامه نویس Backend</li>
                 <li>تهران تندیس | 1403/10/29 - 1404/5/20 | برنامه نویس Backend</li>
                 <li>فیدار | 1403/1/20 - 1403/3/30 | برنامه نویس Backend</li>
                 <li>امن افزار گستر شریف | 1402/6/1 - 1403/1/20 | برنامه نویس Backend</li>
@@ -124,6 +120,8 @@
                 <li>پروژه SSO</li>
                 <li>پروژه FileManager</li>
                 <li>پروژه BPMS</li>
+                <li>کار روی پروژه‌های بانکی</li>
+
             </ul>
         </section>
 
@@ -155,7 +153,7 @@
             <h2>تحصیلات و مدارک</h2>
             <ul>
                 <li>دانشجوی مهندسی کامپیوتر</li>
-                <li>مدارک: <a href="https://faradars.org/verify/3FEAEC7D?lang=en" target="_blank">فارادرس</a></li>
+                <li>مدارک: <a href="https://faradars.org/verify/3FEAEC7D?lang=en" target="_blank">Faradars</a></li>
                 <li>Git: GitHub / GitLab</li>
             </ul>
         </section>
@@ -169,10 +167,14 @@
         </section>
 
         <section>
-            <h2>درباره من</h2>
-            <p>من محمد امین ابراهیمی، برنامه‌نویس جونیور .NET با انگیزه و اشتیاق بالا هستم که آماده‌ام با تمام توانم وارد دنیای توسعه وب بشم و پروژه‌های واقعی رو به مرحله اجرا برسونم. با تجربه کار روی بک‌اند با فریم‌ورک‌های .NET و Django درک خوبی از ساختارها، منطق و معماری پروژه‌های وب دارم و همیشه دنبال راه‌حل‌های بهینه و نوآورانه می‌گردم.  
-            همیشه آماده‌ام چالش‌های جدید را با انعطاف‌پذیری و انگیزه بالا بپذیرم. روحیه کار تیمی، همکاری مؤثر و علاقه به رشد فردی، از عوامل کلیدی پیشرفت من تا امروز بوده‌اند.</p>
-        </section>
+    <h2>درباره من</h2>
+    <p>
+        من محمد امین ابراهیمی، برنامه‌نویس .NET هستم و هم‌اکنون در حوزه توسعه بک‌اند مشغول به کار هستم.  
+        با تجربه عملی در پروژه‌های واقعی با فریم‌ورک‌های .NET و Django، درک خوبی از ساختارها، منطق و معماری پروژه‌های وب دارم و همواره دنبال راه‌حل‌های بهینه و نوآورانه می‌گردم.  
+        علاقه‌مند به یادگیری مداوم، حل چالش‌های جدید و همکاری مؤثر در تیم‌های توسعه هستم و همیشه سعی می‌کنم کیفیت و عملکرد پروژه‌ها را به بالاترین حد برسانم.
+    </p>
+</section>
+
     </main>
 
     <footer>
