--- a/index.html
+++ b/index.html
@@ -5,95 +5,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>محمد ابراهیمی | .NET Developer</title>
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #f4f4f9;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
+    body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background: #f4f4f9;
+        color: #333;
+        margin: 0;
+        padding: 0;
+        direction: rtl;
+        text-align: right;
+    }
 
-        header {
-            background: #2b2d42;
-            color: white;
-            padding: 40px 20px;
-            text-align: center;
-        }
+    header {
+        background: #2b2d42;
+        color: white;
+        padding: 40px 20px;
+        text-align: center;
+    }
 
+    header h1 {
+        margin: 0;
+        font-size: 2.5em;
+    }
+
+    header p {
+        font-size: 1.1em;
+        margin-top: 10px;
+        color: #ddd;
+    }
+
+    main {
+        max-width: 900px;
+        margin: 40px auto;
+        padding: 0 20px;
+    }
+
+    section {
+        background: white;
+        padding: 20px 30px;
+        margin-bottom: 20px;
+        border-radius: 10px;
+        box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+    }
+
+    section h2 {
+        margin-top: 0;
+        color: #2b2d42;
+    }
+
+    section ul {
+        list-style: none;
+        padding-left: 0;
+    }
+
+    section ul li {
+        margin-bottom: 8px;
+    }
+
+    section ul li ul {
+        margin-top: 5px;
+        margin-bottom: 5px;
+        padding-left: 15px;
+        list-style: disc;
+    }
+
+    a.button {
+        display: inline-block;
+        margin-top: 15px;
+        padding: 10px 20px;
+        background: #2b2d42;
+        color: white;
+        text-decoration: none;
+        border-radius: 8px;
+        transition: background 0.3s;
+    }
+
+    a.button:hover {
+        background: #3b3f5c;
+    }
+
+    footer {
+        text-align: center;
+        padding: 20px;
+        color: #555;
+        font-size: 0.9em;
+    }
+
+    @media (max-width: 600px) {
         header h1 {
-            margin: 0;
-            font-size: 2.5em;
+            font-size: 2em;
         }
+    }
+</style>
 
-        header p {
-            font-size: 1.1em;
-            margin-top: 10px;
-            color: #ddd;
-        }
-
-        main {
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
-
-        section {
-            background: white;
-            padding: 20px 30px;
-            margin-bottom: 20px;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
-        }
-
-        section h2 {
-            margin-top: 0;
-            color: #2b2d42;
-        }
-
-        section ul {
-            list-style: none;
-            padding-left: 0;
-        }
-
-        section ul li {
-            margin-bottom: 8px;
-        }
-
-        section ul li ul {
-            margin-top: 5px;
-            margin-bottom: 5px;
-            padding-left: 15px;
-            list-style: disc;
-        }
-
-        a.button {
-            display: inline-block;
-            margin-top: 15px;
-            padding: 10px 20px;
-            background: #2b2d42;
-            color: white;
-            text-decoration: none;
-            border-radius: 8px;
-            transition: background 0.3s;
-        }
-
-        a.button:hover {
-            background: #3b3f5c;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            color: #555;
-            font-size: 0.9em;
-        }
-
-        @media (max-width: 600px) {
-            header h1 {
-                font-size: 2em;
-            }
-        }
-    </style>
 </head>
 <body>
     <header>
