--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
             <h2>تحصیلات و مدارک</h2>
             <ul>
                 <li>دانشجوی مهندسی کامپیوتر</li>
-                <li>مدارک: <a href="https://faradars.org/verify/3FEAEC7D?lang=en" target="_blank">Faradars</a></li>
-                <li>Git: GitHub / GitLab</li>
+                <li>مدارک: </li>
+                <li>Git: GitHub / GitLab : <a href="https://faradars.org/verify/3FEAEC7D?lang=en" target="_blank">Faradars</a></li>
             </ul>
         </section>
 
