Update contact form to use Formspree

--- a/index.html
+++ b/index.html
@@ -226,12 +226,13 @@
             </ul>
 
             <h3>ارسال پیام سریع:</h3>
-            <form action="mailto:me7445950@gmail.com" method="post" enctype="text/plain">
-                <input type="text" name="name" placeholder="نام شما" required>
-                <input type="email" name="email" placeholder="ایمیل شما" required>
-                <textarea name="message" placeholder="پیام شما" rows="5" required></textarea>
-                <button type="submit">ارسال</button>
-            </form>
+            <form action="https://formspree.io/f/mgvpanek" method="POST">
+    <input type="text" name="name" placeholder="نام شما" required>
+    <input type="email" name="email" placeholder="ایمیل شما" required>
+    <textarea name="message" placeholder="پیام شما" rows="5" required></textarea>
+    <button type="submit">ارسال</button>
+</form>
+
         </section>
 
         <section>
