--- a/index.html
+++ b/index.html
@@ -220,7 +220,12 @@
             <h2>تماس با من</h2>
             <ul>
                 <li>GitHub: <a href="https://github.com/Janusae" target="_blank">https://github.com/Janusae</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/mohammad-ebrahimi-337769284/" target="_blank">https://www.linkedin.com/in/mohammad-ebrahimi-337769284</a></li>
+                <li>
+  LinkedIn:
+  <a href="https://www.linkedin.com/in/mohammad-ebrahimi-337769284/" target="_blank">
+    مشاهده پروفایل LinkedIn
+  </a>
+</li>
                 <li>Email: <a href="mailto:me7445950@gmail.com">me7445950@gmail.com</a></li>
                 <li>Phone: <a href="tel:09912006099">09912006099</a></li>
             </ul>
