--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <li>
   LinkedIn:
   <a href="https://www.linkedin.com/in/mohammad-ebrahimi-337769284/" target="_blank">
-    مشاهده پروفایل LinkedIn
+    LinkedIn
   </a>
 </li>
                 <li>Email: <a href="mailto:me7445950@gmail.com">me7445950@gmail.com</a></li>
