Update education section with new credentials

--- a/index.html
+++ b/index.html
@@ -211,8 +211,9 @@
             <h2>تحصیلات و مدارک</h2>
             <ul>
                 <li>دانشجوی مهندسی کامپیوتر</li>
-                <li>مدارک: <a href="https://faradars.org/verify/3FEAEC7D?lang=en" target="_blank">Faradars</a></li>
-                <li>Git: GitHub / GitLab</li>
+                <li>مدارک:</li>
+                <li>Git: GitHub / GitLab  <a href="https://faradars.org/verify/3FEAEC7D?lang=en" target="_blank">Faradars</a</li>
+                <li>Network+  <a href="https://faradars.org/verify/07DA4B2B" target="_blank">Faradars</a</li>
             </ul>
         </section>
 
