Update skills list in index.html

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
         <section id="skills">
             <h2>مهارت‌ها</h2>
             <ul>
-                <li>زبان‌ها: C#, Python</li>
-                <li>فریمورک‌ها: ASP.NET Core, Django</li>
+                <li>زبان‌ها: C#, Python , Rust</li>
+                <li>فریمورک‌ها: ASP.NET Core, Blazor , Django</li>
                 <li>پلتفرم: .NET Core</li>
                 <li>پایگاه داده: SQL Server, PostgreSQL, Redis</li>
                 <li>معماری‌ها: Clean, Microservice</li>
