Revise work experience and personal description
Updated work experience and skills sections in index.html.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <section id="experience">
             <h2>تجربه کاری</h2>
             <ul>
-                <li>یاس‌های ارغوانی | 1404/7/14 - اکنون | برنامه نویس Backend</li>
+                <li>یاس‌های ارغوانی | 1404/7/1 - اکنون | برنامه نویس Backend</li>
                 <li>تهران تندیس | 1403/10/29 - 1404/5/20 | برنامه نویس Backend</li>
                 <li>فیدار | 1403/1/20 - 1403/3/30 | برنامه نویس Backend</li>
                 <li>امن افزار گستر شریف | 1402/6/1 - 1403/1/20 | برنامه نویس Backend</li>
@@ -179,6 +179,7 @@
                 <li>پروژه SSO</li>
                 <li>پروژه FileManager</li>
                 <li>پروژه BPMS</li>
+                <li>پروژه Nama</li>
                 <li>کار روی پروژه‌های بانکی</li>
             </ul>
         </section>
@@ -214,6 +215,8 @@
                 <li>مدارک:</li>
                 <li>Git: GitHub / GitLab  <a href="https://faradars.org/verify/3FEAEC7D?lang=en" target="_blank">Faradars</a</li>
                 <li>Network+  <a href="https://faradars.org/verify/07DA4B2B" target="_blank">Faradars</a</li>
+                <li>Deep understanding of the network <a href="https://faradars.org/verify/A1EF0F96" target="_blank">Faradars</a</li>
+                <li>EF Core   <a href="https://codeyad.com/course/learn-ef-core" target="_blank">Faradars</a</li>
             </ul>
         </section>
 
@@ -244,9 +247,8 @@
         <section>
             <h2>درباره من</h2>
             <p>
-                من محمد امین ابراهیمی، برنامه‌نویس .NET هستم و هم‌اکنون در حوزه توسعه بک‌اند مشغول به کار هستم.  
-                با تجربه عملی در پروژه‌های واقعی با فریم‌ورک‌های .NET و Django، درک خوبی از ساختارها، منطق و معماری پروژه‌های وب دارم و همواره دنبال راه‌حل‌های بهینه و نوآورانه می‌گردم.  
-                علاقه‌مند به یادگیری مداوم، حل چالش‌های جدید و همکاری مؤثر در تیم‌های توسعه هستم و همیشه سعی می‌کنم کیفیت و عملکرد پروژه‌ها را به بالاترین حد برسانم.
+                من یک توسعه‌دهنده بک‌اند هستم که در حال حاضر تمرکز اصلی‌ام بر پیاده‌سازی سیستم‌های بک‌اند با استفاده از فناوری‌های .NET است و پیش از این تجربه عملی کار با Python و Django را نیز داشته‌ام. از طریق پروژه‌های واقعی و در سطح پروداکشن، درک عمیقی از معماری‌های مدرن وب، اصول کدنویسی تمیز (Clean Code) و طراحی بک‌اند مقیاس‌پذیر به دست آورده‌ام.
+                به‌عنوان عضوی همکار و تیم‌محور، به‌صورت نزدیک با تیم‌های چندتخصصی همکاری کرده‌ام تا سرویس‌های بک‌اند پایدار و امن ارائه شود و همواره در بهبود سیستم‌ها و موفقیت بلندمدت پروژه‌ها نقش فعالی داشته‌ام.
             </p>
         </section>
     </main>
