--- a/index.html
+++ b/index.html
@@ -210,14 +210,34 @@
 
         <section id="education">
             <h2>تحصیلات و مدارک</h2>
-            <ul>
-                <li>دانشجوی مهندسی کامپیوتر</li>
-                <li>مدارک:</li>
-                <li>Git: GitHub / GitLab  <a href="https://faradars.org/verify/3FEAEC7D?lang=en" target="_blank">Faradars</a</li>
-                <li>Network+  <a href="https://faradars.org/verify/07DA4B2B" target="_blank">Faradars</a</li>
-                <li>Deep understanding of the network <a href="https://faradars.org/verify/A1EF0F96" target="_blank">Faradars</a</li>
-                <li>EF Core   <a href="https://codeyad.com/course/learn-ef-core" target="_blank">Faradars</a</li>
-            </ul>
+<ul>
+    <li>دانشجوی مهندسی کامپیوتر</li>
+    <li><strong>مدارک و دوره‌ها:</strong></li>
+    <li>
+        Git (GitHub / GitLab)
+        <a href="https://faradars.org/verify/3FEAEC7D?lang=en" target="_blank">
+            مشاهده مدرک
+        </a>
+    </li>
+    <li>
+        Network+
+        <a href="https://faradars.org/verify/07DA4B2B" target="_blank">
+            مشاهده مدرک
+        </a>
+    </li>
+    <li>
+        درک عمیق از شبکه (Deep Understanding of Network)
+        <a href="https://faradars.org/verify/A1EF0F96" target="_blank">
+            مشاهده مدرک
+        </a>
+    </li>
+    <li>
+        Entity Framework Core
+        <a href="https://codeyad.com/course/learn-ef-core" target="_blank">
+            مشاهده دوره
+        </a>
+    </li>
+</ul>
         </section>
 
         <section id="contact">
