Add custom Object Mapping library implementation details

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
                 <li>پروژه BPMS</li>
                 <li>پروژه Nama</li>
                 <li>کار روی پروژه‌های بانکی</li>
+                <li>پیاده‌سازی کتابخانه Object Mapping سفارشی (الهام‌گرفته از AutoMapper) و استفاده از آن در سناریوهای واقعی انتقال داده</li>
             </ul>
         </section>
 
