Update project description for MapsterLite package

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <li>پروژه BPMS</li>
                 <li>پروژه Nama</li>
                 <li>کار روی پروژه‌های بانکی</li>
-                <li>پیاده‌سازی کتابخانه Object Mapping سفارشی (الهام‌گرفته از AutoMapper) و استفاده از آن در سناریوهای واقعی انتقال داده</li>
+                <li>تجربه طراحی و پیاده‌سازی پکیج MapsterLite با شبیه‌سازی الگوی کاری AutoMapper، به‌عنوان یک لایه‌ی سبک‌تر و ساده‌تر روی Mapster برای object mapping در پروژه‌های .NET</li>
             </ul>
         </section>
 
